lib/tests/fixtures/compiler/parser/class_bad_param_name.baseline
Error: class_bad_param_name.pp:1:11: parameter $0 has an unacceptable name: the name must conform to /[a-z_]\w*/.
  class foo($0) {
            ^~
